--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      - name: Build Docker images
+        run: docker-compose build
+
+      - name: Start Docker containers
+        run: docker-compose up -d
+
       - name: Run tests
-        run: ./run_tests.sh
+        run: |
+          docker-compose exec -T api go test ./...
+
+      - name: Stop Docker containers
+        run: docker-compose down
